--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -73,3 +73,9 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/Slash.Bird.SpringArm",NewName="/Script/Slash.Bird.CameraBoom")
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+CellSize=10.000000
+CellHeight=40.000000
+
